components/global/PostList/PostList.module.css
.topContainer {
    align-items: center;
    display: flex;
    justify-content: space-between;
    margin: 4rem auto 1rem auto;
    padding-bottom: 1rem;
    max-width: 1300px;
    padding-right: 1rem;
    width: 100%;
}

.stackableTopContainer {
    padding: 1rem 0;
}

.stackableContainer {
    display: grid;
    grid-template-columns: 1fr;
    grid-auto-flow: row;
    gap: 1rem;
}

@media (min-width: 768px) {
    .stackableContainer {
        grid-template-columns: repeat(2, 1fr);
    }
}

.scrollContainer {
    display: grid;
    grid-template-rows: repeat(2, 1fr);
    grid-auto-flow: column;
    gap: 1rem;
    margin-left: 1rem;
    overflow-y: clip;
    -webkit-overflow-scrolling: touch;
    position: relative;
    scrollbar-width: none;
    padding-bottom: 1rem;
}

@media (min-width: 1300px) {
    .scrollContainer {
        margin: 0;
        padding-left: calc((100vw - 1300px) / 2) !important;
    }
}

.scrollContainer > a {
    min-width: 300px;
}

.scrollContainer::-webkit-scrollbar {
    display: none;
}

.scrollbar {
    background-color: var(--scrollbar-color);
    border: 5px solid white;
    border-radius: 1rem;
    cursor: grab;
    height: 18px;
    width: 0px;
    transition: background-color linear 0.3s;
}

.scrollbar:hover {
    background-color: var(--primary-color);
}

.scrollbar:focus {
    background-color: var(--primary-color);
}

.dragging .scrollbar {
    background-color: var(--primary-color);
}

.track {
    background-color: transparent;
    margin-top: 1rem;
}

@media (min-width: 1300px) {
    .track {
        margin-left: calc((100vw - 1300px) / 2);
        width: calc(100vw - (100vw - 1300px) / 2);
    }
}

/* Last ditch attempt to get padding at end of scrolling area */
.scrollContainer > div:last-child {
    position: relative;
}

.scrollContainer > div:last-child:after {
    content: '';
    position: absolute;
    right: -1rem;
    height: 20px;
    width: 1rem;
}

